# dbbasic-object-server

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  deployment_checks.py  docker-compose.yml  http_api_contract.py  object_activity.py  object_ai.py  object_analytics.py  object_api_keys.py  object_backup.py  object_backup_index.py  object_collections.py  object_computed.py  object_connectors.py  object_correlation.py  object_credentials.py  object_daemon.py  object_daemon_control.py  object_daemon_status.py  object_email.py  object_events.py  object_execution.py  object_field_permissions.py  object_file_changes.py  object_files.py  object_finance.py  object_handlers.py  object_identity.py  object_identity_cli.py  object_ids.py  object_import.py  object_logs.py  object_materialize.py  object_mcp.py  (+36 more)
docs/: README.md  app-packages.md  append-only-storage-design.md  architecture.md  asgi-realtime-direction.md  backup-restore.md  business-logic-patterns.md  capabilities.md  capability-objects.md  comparisons.md  design-system.md  docker-deployment.md  durability-and-recovery.md  event-hooks-decisions.md  generative-ui.md  http-api-contract.md  logic-decisions.md  object-authoring.md  package-authoring.md  per-tenant-storage-direction.md  permissions-model.md  quickstart.md  realtime.md  rest-and-object-messages.md  runtime-contract.md  schema-forms.md  secrets-and-credentials.md  shell-and-ai.md  single-vm-deployment.md  site-routing.md  status.md  storage-modes.md  traffic-limits.md  ui-decisions.md  upgrade-and-customization.md  validation-and-logic.md  why-dbbasic.md
packages-private/: README.md
scripts/: docker-entrypoint.sh  install.sh
tests/: conftest.py  test_app_activity_package.py  test_app_articles_detail_retrofit.py  test_app_catalog_detail_retrofit.py  test_app_catalog_package.py  (+119 more)
(+2 files in other folders)
