[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dbbasic-object-server"
version = "0.0.1"
description = "Python runtime for live, versioned DBBASIC application objects"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "DBBASIC Project", email = "dan@askrobots.com"}
]
keywords = [
    "dbbasic",
    "object-runtime",
    "application-server",
    "tsv",
    "live-objects",
    "versioned-objects",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]
test = [
    "pytest>=7.4.0",
]

[project.urls]
Homepage = "https://dbbasic.com"
Repository = "https://github.com/askrobots/dbbasic-object-server"
Issues = "https://github.com/askrobots/dbbasic-object-server/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
]

[tool.setuptools]
py-modules = [
    "object_daemon",
    "object_execution",
    "object_namespace",
    "object_versions",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
